# pheno

./: .broken_md_refs.txt  .coderabbit.yaml  .commit-template  .env.development.example  .gitignore  .gitmodules  .mcp-testing.yaml  ADR.md  ADR_REGISTRY.md  AGENTS.md  CHANGELOG.md  CITATION.cff  CI_FAILURE_DIAGNOSTIC_REPORT.md  CI_REMEDIATION_PLAN.md  CLAUDE.md  COMPARISON.md  CONTRIBUTING.md  Cargo.toml  DEPENDENCY_PHASE2_EXECUTION_PLAN.md  DEPENDENCY_PHASE2_START.md  DEPENDENCY_PHASE2_VALIDATION.md  DUPLICATION_AUDIT.md  Dockerfile.rust  EXECUTION_BRIEFING.md  FINAL_VERIFICATION_CHECKLIST.md  FUNCTIONAL_REQUIREMENTS.md  GOVERNANCE.md  GOVERNANCE_SYNC_COMPLETED.md  MULTI_AGENT_ORCHESTRATION_COMPARISON_2026.md  ORCHESTRATION_RESEARCH_INDEX.md  PHASE1_ARTIFACTS_INDEX.md  PHASE1_COMPLETION_TIMELINE.md  PHASE1_EXECUTION_INDEX.md  PHASE1_EXECUTION_NOW.md  PHASE1_FINAL_EXECUTION_BRIEF.md  PHASE1_TEAM_COMMS.md  PHASE1_TRACKER.yml  PHASE2_README.md  PHASE2_SETUP_COMPLETE.txt  PHASE4_COMPLETION_REPORT.md  (+31 more)
.cargo/: config.toml
.forge/: PR_DESC_1.md  PR_DESC_2.md
.githooks/: pre-commit  pre-push  spec-validator
.github/: BRANCH_PROTECTION_SPECS_MAIN.md  GOVERNANCE.md  routing-matrix.yaml
.serena/: project.yml
agileplus/: .commitlintrc.yml  .env.example  .gitignore  ADR.md  (+23 more)
agileplus-mcp/: pyproject.toml
agileplus/agileplus-mcp/: .gitignore  Dockerfile  pyproject.toml
agileplus/agileplus-mcp/docs/: conf.py  index.rst
agileplus/agileplus-mcp/src/agileplus_mcp/: __init__.py  __main__.py  grpc_client.py  server.py
agileplus/agileplus-mcp/src/agileplus_mcp/prompts/: __init__.py
agileplus/agileplus-mcp/src/agileplus_mcp/resources/: __init__.py
agileplus/agileplus-mcp/src/agileplus_mcp/sampling/: __init__.py
agileplus/agileplus-mcp/tests/: __init__.py  conftest.py
agileplus/agileplus-mcp/tests/bdd/: __init__.py  environment.py
agileplus/agileplus-mcp/tests/contract/: __init__.py
agileplus/agileplus-mcp/tests/unit/: __init__.py  test_server.py
agileplus/python/: Dockerfile.python  gen_protos.py  pyproject.toml
agileplus/python/src/agileplus_mcp/: __init__.py  __main__.py  grpc_backlog.py  grpc_client.py  grpc_errors.py  grpc_serialization.py  grpc_streaming.py  server.py
agileplus/python/src/agileplus_mcp/sampling/: __init__.py
agileplus/python/src/agileplus_proto/: __init__.py
agileplus/python/tests/: test_grpc_client.py  test_tools.py
agileplus/python/tests/bdd/: __init__.py  environment.py  features
agileplus/python/tests/bdd/steps/: given_steps.py  then_steps.py  when_steps.py
agileplus/python/tests/contract/: test_agileplus_consumer.py
agileplus/python/tests/integration/: __init__.py  conftest.py  test_mcp_audit_chain.py  test_mcp_feature_lifecycle.py  test_mcp_feature_listing.py  test_mcp_feature_state.py  test_mcp_governance_gate.py  test_mcp_workflow.py
bifrost-routing/: Cargo.toml
bifrost-routing/src/: error.rs  lib.rs  models.rs
crates/agileplus-api/: Cargo.toml
crates/agileplus-cache/: Cargo.toml
crates/agileplus-cli/: Cargo.toml
crates/agileplus-domain/: Cargo.toml
crates/agileplus-domain/src/: entities.rs  lib.rs  values.rs
crates/agileplus-domain/src/domain/: snapshot.rs
crates/agileplus-domain/src/ports/: mod.rs
crates/agileplus-error-core/: Cargo.toml
crates/agileplus-error-core/src/: api.rs  config.rs  database.rs  domain.rs  internal.rs  lib.rs  parse.rs  serialization.rs  storage.rs  sync.rs  traits.rs  validation.rs
crates/agileplus-events/: Cargo.toml
crates/agileplus-nats/: Cargo.toml
crates/agileplus-p2p/: Cargo.toml
crates/agileplus-subcmds/: Cargo.toml
crates/agileplus-sync/: Cargo.toml
crates/phenotype-async-traits/: Cargo.toml
crates/phenotype-async-traits/src/: lib.rs
crates/phenotype-cache-adapter/: Cargo.toml
crates/phenotype-cache-adapter/examples/: usage.rs
crates/phenotype-cache-adapter/phenotype-cache-adapter/src/: lib.rs
crates/phenotype-cache-adapter/src/: error.rs  lib.rs
crates/phenotype-casbin-wrapper/: Cargo.toml
crates/phenotype-casbin-wrapper/src/: adapter.rs  error.rs  lib.rs  models.rs
crates/phenotype-config-core/: CANONICAL.md  Cargo.toml
crates/phenotype-config-core/src/: lib.rs  mod.rs
crates/phenotype-config-core/src/builder/: mod.rs
crates/phenotype-config-core/src/error/: mod.rs
crates/phenotype-config-core/src/source/: mod.rs
crates/phenotype-config-loader/: Cargo.toml
crates/phenotype-config-loader/src/: lib.rs
crates/phenotype-contracts/: Cargo.toml
crates/phenotype-contracts/src/: adapters.rs  error.rs  inbound.rs  lib.rs  models.rs  outbound.rs  tests.rs
crates/phenotype-contracts/src/models/: aggregate.rs  entity.rs  mod.rs  value_object.rs
crates/phenotype-contracts/src/ports/: mod.rs
crates/phenotype-contracts/src/ports/inbound/: mod.rs
crates/phenotype-contracts/src/ports/outbound/: cache.rs  event.rs  mod.rs  repository.rs  secret.rs
crates/phenotype-cost-core/: Cargo.toml
crates/phenotype-cost-core/src/: budget.rs  calculator.rs  error.rs  lib.rs  pricing.rs  token_counter.rs
crates/phenotype-crypto/: Cargo.toml
crates/phenotype-crypto/src/: hash.rs  lib.rs
crates/phenotype-error-core/: CANONICAL.md  Cargo.toml
crates/phenotype-error-core/src/: lib.rs
crates/phenotype-error-macros/: Cargo.toml
crates/phenotype-error-macros/src/: lib.rs
crates/phenotype-errors/: Cargo.toml
crates/phenotype-errors/src/: error.rs  lib.rs
crates/phenotype-event-sourcing/: Cargo.toml
crates/phenotype-event-sourcing/src/: error.rs  event.rs  event_sourced.rs  hash.rs  lib.rs  memory.rs  snapshot.rs  store.rs
crates/phenotype-git-core/: Cargo.toml
crates/phenotype-git-core/src/: lib.rs  repository.rs
crates/phenotype-git-core/tests/: git_ops_test.rs
crates/phenotype-health/: CANONICAL.md  Cargo.toml
crates/phenotype-health/src/: lib.rs
crates/phenotype-http-client-core/: Cargo.toml
crates/phenotype-http-client-core/src/: auth.rs  client.rs  error.rs  lib.rs  retry.rs
crates/phenotype-http-client-core/tests/: client_test.rs
crates/phenotype-logging/: Cargo.toml
crates/phenotype-logging/src/: lib.rs
(+1519 files in other folders)
