[workspace.package]
version = "0.2.0"
edition = "2021"
license = "MIT"
rust-version = "1.75"
authors = ["Phenotype Team"]
repository = "https://github.com/KooshaPari/phenotype-infrakit"
description = "Phenotype Infrastructure Kit"

[workspace]
resolver = "2"
members = [
    "crates/phenotype-async-traits",
    "crates/phenotype-cache-adapter",
    "crates/phenotype-casbin-wrapper",
    "crates/phenotype-contract",
    "crates/phenotype-contracts",
    "crates/phenotype-error-core",
    "crates/phenotype-error-macros",
    "crates/phenotype-errors",
    "crates/phenotype-event-sourcing",
    "crates/phenotype-health",
    "crates/phenotype-iter",
    "crates/phenotype-logging",
    "crates/phenotype-policy-engine",
    "crates/phenotype-port-traits",
    "crates/phenotype-state-machine",
    "crates/phenotype-telemetry",
    "crates/phenotype-validation",
]
[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
anyhow = "1"
dirs = "5"
async-trait = "0.1"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4", "serde"] }
tokio = { version = "1", features = ["full"] }
dashmap = "5"
parking_lot = "0.12"
lru = "0.12"
toml = "0.8"
regex = "1"
tempfile = "3"
sha2 = "0.10"
tracing = "0.1"
tracing-subscriber = "0.3"
futures = "0.3"
strum = { version = "0.26", features = ["derive"] }
once_cell = "1.19"
blake3 = "1"
phenotype-policy-engine = { path = "crates/phenotype-policy-engine" }
hex = "0.4"
phenotype-error-core = { path = "crates/phenotype-error-core" }
phenotype-errors = { path = "crates/phenotype-errors" }
[profile.dev]
opt-level = 0
debug = true
[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
strip = true