[workspace.package]
version = "0.2.0"
edition = "2021"
license = "MIT"
rust-version = "1.75"
authors = ["Phenotype Team"]
repository = "https://github.com/KooshaPari/phenotype-shared"
description = "Phenotype Infrastructure Kit"

[workspace]
resolver = "2"
members = [
    "crates/phenotype-async-traits",
    "crates/phenotype-cache-adapter",
    "crates/phenotype-config-core",
    "crates/phenotype-contract",
    "crates/phenotype-contracts",
    "crates/phenotype-core",
    "crates/phenotype-error-core",
    "crates/phenotype-error-macros",
    "crates/phenotype-errors",
    "crates/phenotype-event-bus",
    "crates/phenotype-event-sourcing",
    "crates/phenotype-compliance-scanner",
    "crates/phenotype-health",
    "crates/phenotype-http-client-core",
    "crates/phenotype-infrastructure",
    "crates/phenotype-project-registry",
    "crates/phenotype-security-aggregator",
    "crates/phenotype-iter",
    "crates/phenotype-mock",
    "crates/phenotype-policy-engine",
    "crates/phenotype-port-traits",
    "crates/phenotype-retry",
    "crates/phenotype-state-machine",
    "crates/phenotype-string",
    "crates/phenotype-telemetry",
    "crates/phenotype-test-fixtures",
    "crates/phenotype-test-infra",
    "crates/phenotype-testing",
    "crates/phenotype-time",
    "crates/phenotype-validation",
    "Logify",
    "Metron",
    "Tasken",
    "Eventra",
    "Traceon",
    "Stashly",
    "Settly",
    "Authvault",
]
[workspace.dependencies]
# Core
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
anyhow = "1"
dirs = "5"
async-trait = "0.1"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4", "serde"] }
tokio = { version = "1", features = ["full"] }
dashmap = "5"
parking_lot = "0.12"
lru = "0.12"
toml = "0.8"
regex = "1"
tempfile = "3"
sha2 = "0.10"
tracing = "0.1"
tracing-subscriber = "0.3"
futures = "0.3"
strum = { version = "0.26", features = ["derive"] }
once_cell = "1.19"
blake3 = "1"
hex = "0.4"
zstd = "0.13"
unicode-normalization = "0.1"
rand = "0.8"
derive_builder = "0.20"
criterion = "0.5"
mockall = "0.12"
proptest = "1.4"
ulid = "1"

# Phenotype internal crates
arc-swap = "1"
phenotype-async-traits = { path = "crates/phenotype-async-traits" }
phenotype-bdd = { path = "crates/phenotype-bdd" }
phenotype-cache-adapter = { path = "crates/phenotype-cache-adapter" }
phenotype-compliance-scanner = { path = "crates/phenotype-compliance-scanner" }
phenotype-config-core = { path = "crates/phenotype-config-core" }
phenotype-contract = { path = "crates/phenotype-contract" }
phenotype-contracts = { path = "crates/phenotype-contracts" }
phenotype-core = { path = "crates/phenotype-core" }
phenotype-cost-core = { path = "crates/phenotype-cost-core" }
phenotype-crypto = { path = "crates/phenotype-crypto" }
phenotype-error-core = { path = "crates/phenotype-error-core" }
phenotype-error-macros = { path = "crates/phenotype-error-macros" }
phenotype-errors = { path = "crates/phenotype-errors" }
phenotype-event-bus = { path = "crates/phenotype-event-bus" }
phenotype-event-sourcing = { path = "crates/phenotype-event-sourcing" }
phenotype-git-core = { path = "crates/phenotype-git-core" }
phenotype-health = { path = "crates/phenotype-health" }
phenotype-http-client-core = { path = "crates/phenotype-http-client-core" }
phenotype-infrastructure = { path = "crates/phenotype-infrastructure" }
phenotype-iter = { path = "crates/phenotype-iter" }
phenotype-logging = { path = "crates/phenotype-logging" }
phenotype-macros = { path = "crates/phenotype-macros" }
phenotype-mcp = { path = "crates/phenotype-mcp" }
phenotype-mock = { path = "crates/phenotype-mock" }
phenotype-policy-engine = { path = "crates/phenotype-policy-engine" }
phenotype-port-traits = { path = "crates/phenotype-port-traits" }
phenotype-ports-canonical = { path = "crates/phenotype-ports-canonical" }
phenotype-process = { path = "crates/phenotype-process" }
phenotype-project-registry = { path = "crates/phenotype-project-registry" }
phenotype-retry = { path = "crates/phenotype-retry" }
phenotype-security-aggregator = { path = "crates/phenotype-security-aggregator" }
phenotype-shared-config = { path = "crates/phenotype-shared-config" }
phenotype-state-machine = { path = "crates/phenotype-state-machine" }
phenotype-string = { path = "crates/phenotype-string" }
phenotype-telemetry = { path = "crates/phenotype-telemetry" }
phenotype-test-fixtures = { path = "crates/phenotype-test-fixtures", default-features = false }
phenotype-test-infra = { path = "crates/phenotype-test-infra" }
phenotype-testing = { path = "crates/phenotype-testing" }
phenotype-time = { path = "crates/phenotype-time" }
phenotype-validation = { path = "crates/phenotype-validation" }

# External utilities
axum = "0.7"
axum-extra = "0.9"
clap = { version = "4", features = ["derive"] }
figment = "0.10"
futures-util = "0.3"
http-body-util = "0.1"
hyper = "1"
opentelemetry = { version = "0.24", features = ["trace"] }
opentelemetry_sdk = { version = "0.24", features = ["trace"] }
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
rusqlite = { version = "0.32", features = ["bundled"] }
tokio-test = "0.4"
tokio-util = "0.7"
tower = "0.4"
tower-http = { version = "0.5", features = ["trace"] }
tracing-actix-web = "4"
tracing-opentelemetry = "0.24"

[profile.dev]

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
strip = true
