[package]
name = "bifrost-routing"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
repository.workspace = true
authors.workspace = true

[dependencies]
tokio = { workspace = true }
async-trait = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
reqwest = { version = "0.12", features = ["json", "stream"] }
futures = { workspace = true }
dashmap = { workspace = true }
anyhow = { workspace = true }

[dev-dependencies]
tokio-test = "0.4"
mockall = "0.13"
