[project]
name = "agileplus-python"
version = "0.1.0"
description = "AgilePlus Python components: gRPC proto stubs and MCP service"
requires-python = ">=3.14"
dependencies = [
  "grpcio>=1.62",
  "grpcio-tools>=1.62",
  "protobuf>=5.0",
  "fastmcp>=2.0",
  "grpcio-health-checking>=1.62",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/agileplus_mcp"]

[project.scripts]
agileplus-mcp = "agileplus_mcp.server:main"

[tool.uv]
dev-dependencies = [
  "pytest>=8.0",
  "pytest-asyncio>=0.23",
  "behave>=1.2.6",
  "httpx>=0.27",
]

[tool.ruff]
target-version = "py312"
line-length = 100
src = ["src"]

[tool.ruff.lint]
select = [
  "E",
  "W",    # pycodestyle
  "F",    # pyflakes
  "I",    # isort
  "N",    # pep8-naming
  "UP",   # pyupgrade
  "S",    # bandit (security)
  "B",    # bugbear
  "A",    # builtins shadowing
  "C4",   # comprehensions
  "DTZ",  # datetime timezone
  "T20",  # print statements
  "SIM",  # simplify
  "TCH",  # type checking imports
  "RUF",  # ruff-specific
  "PT",   # pytest style
  "ERA",  # commented-out code
  "PL",   # pylint subset
  "PERF", # performance
  "FURB", # refurb
]
ignore = ["S101"] # allow assert in tests

[tool.ruff.lint.isort]
known-first-party = ["agileplus"]

[tool.ruff.format]
quote-style = "double"

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = ["unit", "integration", "slow"]
addopts = "-q --strict-markers --tb=short"

[tool.coverage.run]
source = ["src"]
branch = true

[tool.coverage.report]
fail_under = 80
