[package]
name = "agileplus-api"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
phenotype-error-core = { path = "../phenotype-error-core" }
agileplus-domain = { path = "../agileplus-domain" }
agileplus-dashboard = { path = "../agileplus-dashboard" }
axum.workspace = true
axum-extra = { version = "0.10", features = ["typed-header"] }
tower = { version = "0.5", features = ["limit", "timeout"] }
tower-http = { version = "0.6", features = ["cors", "fs", "trace"] }
tokio.workspace = true
tokio-stream = { version = "0.1", features = ["sync"] }
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
async-trait = "0.1"
tracing.workspace = true
opentelemetry = { workspace = true, features = ["trace"] }
opentelemetry_sdk = { workspace = true, features = ["trace"] }
tracing-opentelemetry.workspace = true
agileplus-telemetry = { path = "../agileplus-telemetry" }
agileplus-sqlite = { path = "../agileplus-sqlite" }
agileplus-git = { path = "../agileplus-git" }
anyhow = "1.0"
rand = "0.8"
base64 = "0.22"
sha2 = "0.10"
chrono = { version = "0.4", features = ["serde"] }
askama = "0.12"

[dev-dependencies]
tokio = { version = "1", features = ["full"] }
axum-test = "19"
tempfile = "3"
chrono = { version = "0.4", features = ["serde"] }

