[package]
name = "agileplus-cache"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
phenotype-error-core = { path = "../phenotype-error-core" }
agileplus-domain = { path = "../agileplus-domain" }
redis = { version = "0.27", features = ["aio", "tokio-comp"] }
bb8 = "0.9"
bb8-redis = "0.18"
serde .workspace = true
serde_json .workspace = true
thiserror .workspace = true
async-trait = "0.1"
tokio .workspace = true
chrono .workspace = true

[dev-dependencies]
tokio .workspace = true

