[package]
name = "agileplus-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[[bin]]
name = "agileplus"
path = "src/main.rs"

[dependencies]
agileplus-domain = { path = "../agileplus-domain" }
agileplus-plane = { path = "../agileplus-plane" }
agileplus-sqlite = { path = "../agileplus-sqlite" }
agileplus-git = { path = "../agileplus-git" }
agileplus-triage = { path = "../agileplus-triage" }
agileplus-subcmds = { path = "../agileplus-subcmds" }
clap = { version = "4.5", features = ["derive"] }
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
chrono.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
anyhow.workspace = true
similar = "2"

[dev-dependencies]
tempfile = "3"
assert_cmd = "2"
predicates = "3"
