[package]
name = "agileplus-domain"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "AgilePlus domain model — entities, value objects, and port interfaces"

[dependencies]
serde.workspace = true
chrono.workspace = true
uuid.workspace = true
async-trait.workspace = true

[lib]
path = "src/lib.rs"
