[package]
name = "agileplus-domain"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
serde.workspace = true
serde_json.workspace = true
chrono.workspace = true
sha2.workspace = true
thiserror.workspace = true
toml = "0.8"
dirs-next = "2"
zeroize = { version = "1", features = ["derive"] }
keyring = { version = "3", optional = true }
agileplus-plugin-core = { git = "https://github.com/KooshaPari/agileplus-plugin-core", optional = true }
phenotype-migrations = { path = "../../../../../phenotype-shared/crates/phenotype-migrations" }

[features]
keychain = ["dep:keyring"]
plugins = ["agileplus-plugin-core"]

[dev-dependencies]
proptest = "1"
tokio = { version = "1", features = ["full"] }
tempfile = "3"
