[package]
name = "agileplus-error-core"
version = "0.1.0"
edition = "2021"
authors = ["Phenotype Team"]
description = "Unified error handling for AgilePlus ecosystem"
license = "MIT"
repository = "https://github.com/phenotype/repos"

[dependencies]
thiserror = "1.0"
serde = { version = "1.0", features = ["derive"] }
phenotype-error-core = "0.1"

[dev-dependencies]
tokio-test = "0.4"

[lib]
name = "agileplus_error_core"
path = "src/lib.rs"