[package]
name = "agileplus-error-core"
version = "0.2.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/KooshaPari/phenotype-infrakit"
authors = ["Phenotype Team"]
description = "Unified error handling for AgilePlus ecosystem"

[dependencies]
thiserror = "2.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[lib]
name = "agileplus_error_core"
path = "src/lib.rs"
