[package]
name = "agileplus-events"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
phenotype-error-core = { path = "../phenotype-error-core" }
agileplus-domain = { path = "../agileplus-domain" }
serde.workspace = true
serde_json.workspace = true
chrono.workspace = true
sha2.workspace = true
thiserror.workspace = true
async-trait = "0.1"
tokio.workspace = true

[dev-dependencies]
tokio.workspace = true
