[package]
name = "agileplus-nats"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
phenotype-error-core = { path = "../phenotype-error-core" }
phenotype-health = { path = "../phenotype-health" }
agileplus-domain = { path = "../agileplus-domain" }
serde .workspace = true
serde_json .workspace = true
thiserror .workspace = true
tokio .workspace = true
chrono .workspace = true
async-trait = "0.1"
uuid = { version = "1", features = ["v4"] }

[dev-dependencies]
tokio = { workspace = true, features = ["full", "macros"] }

