[package]
name = "agileplus-p2p"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
description = "P2P sync via Tailscale — peer discovery and event replication with vector clocks"

[dependencies]
phenotype-error-core = { path = "../phenotype-error-core" }
agileplus-domain = { path = "../agileplus-domain" }
agileplus-events = { path = "../agileplus-events" }
agileplus-sync = { path = "../agileplus-sync" }
serde .workspace = true
serde_json .workspace = true
chrono .workspace = true
tokio .workspace = true
thiserror .workspace = true
tracing .workspace = true
async-nats = "0.46"
async-trait = "0.1"
uuid = { version = "1", features = ["v4", "serde"] }
hyper = { version = "1", features = ["client", "http1"] }
hyper-util = { version = "0.1", features = ["tokio"] }
http-body-util = "0.1"
bytes = "1"
futures-util = "0.3"
hostname = "0.4"
tokio-retry = "0.3"

[dev-dependencies]
tokio .workspace = true

