[package]
name = "agileplus-sync"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
description = "Sync orchestrator for AgilePlus — conflict detection, resolution, and NATS integration"

[dependencies]
phenotype-error-core = { path = "../phenotype-error-core" }
agileplus-domain = { path = "../agileplus-domain" }
agileplus-events = { path = "../agileplus-events" }
serde.workspace = true
serde_json .workspace = true
chrono.workspace = true
sha2.workspace = true
thiserror.workspace = true
async-trait = "0.1"
async-nats = "0.46"
futures-util = "0.3"
tokio.workspace = true
tracing.workspace = true

[dev-dependencies]
tokio = { version = "1", features = ["full"] }

