[package]
<<<<<<<< HEAD:crates/phenotype-async-traits/Cargo.toml
name = "phenotype-async-traits"
========
name = "phenotype-rate-limit"
>>>>>>>> origin/main:crates/phenotype-rate-limit/Cargo.toml
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
repository.workspace = true
authors.workspace = true
<<<<<<<< HEAD:crates/phenotype-async-traits/Cargo.toml
description = "Reusable async trait helper utilities for Phenotype crates."
========
description = "TODO"
>>>>>>>> origin/main:crates/phenotype-rate-limit/Cargo.toml

[lib]
path = "src/lib.rs"

[dependencies]
<<<<<<<< HEAD:crates/phenotype-async-traits/Cargo.toml
async-trait.workspace = true
========
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
>>>>>>>> origin/main:crates/phenotype-rate-limit/Cargo.toml
