[package]
name = "phenotype-cache-adapter"
version = "0.2.0"
edition = "2021"
license = "MIT"
description = "Cache adapter for Phenotype"

[lib]
path = "src/lib.rs"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
dashmap = { workspace = true }
lru = { workspace = true }
moka = { workspace = true }
