[package]
name = "phenotype-casbin-wrapper"
version = "0.2.0"
edition = "2021"
license = "MIT"
description = "Casbin adapter providing policy enforcement for the Phenotype ecosystem"

[lib]
path = "src/lib.rs"

[dependencies]
casbin = "2"
serde = { version = "1.0", features = ["derive"] }
thiserror = "2.0"
tracing = { workspace = true }
tokio = { version = "1", features = ["sync", "rt"] }
