[package]
name = "phenotype-config-core"
version = "0.2.0"
edition = "2021"
license = "MIT OR Apache-2.0"
rust-version = "1.75"
repository = "https://github.com/KooshaPari/phenotype-infrakit"
authors = ["Phenotype Team"]
description = "Cascading TOML config loader with env overrides and unified patterns"

[lib]
path = "src/lib.rs"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"
toml = "0.8"
dirs = "5.0"
figment = "0.15.0"
serde_yaml = "0.9"
schemars = "0.8"
jsonschema = "0.18"