[package]
name = "phenotype-config-loader"
version.workspace = true
edition.workspace = true
license.workspace = true

[lib]
path = "src/lib.rs"

[dependencies]
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
toml.workspace = true
dirs.workspace = true
figment.workspace = true
serde_yaml.workspace = true
