[package]
name = "phenotype-contracts"
version = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
rust-version = { workspace = true }
repository = { workspace = true }
authors = { workspace = true }
description = { workspace = true }

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
async-trait = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
phenotype-errors = { workspace = true }

[dev-dependencies]
tokio = { workspace = true }
