[package]
name = "phenotype-cost-core"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Cost calculation, pricing models, and budget enforcement for LLM operations"

[features]
default = ["serialize"]
serialize = ["dep:serde"]

[dependencies]
serde = { version = "1.0", features = ["derive"], optional = true }
serde_json.workspace = true
thiserror.workspace = true
chrono.workspace = true
uuid.workspace = true
