[package]
name = "phenotype-crypto"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Cryptographic utilities for Phenotype — hashing, hex encoding, and content addressing"

[dependencies]
sha2.workspace = true
hex.workspace = true
blake3.workspace = true
thiserror.workspace = true

[lib]
path = "src/lib.rs"
