[package]
name = "phenotype-errors"
version = "0.2.0"
edition = "2021"
license = "MIT"
description = "Error types for Phenotype"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"
chrono = { version = "0.4", features = ["serde"] }

[lib]
path = "src/lib.rs"
