[package]
[package]
name = "phenotype-event-sourcing"
edition = "2021"
license = "MIT"
description = "Event sourcing for Phenotype"

[lib]
path = "src/lib.rs"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4", "serde"] }
async-trait = "0.1"
