[package]
name = "phenotype-health"
version = "0.2.0"
edition = "2021"
license = "MIT"
[lib]
path = "src/lib.rs"
[dependencies]
serde = { version = "1", features = ["derive"] }
thiserror = "2"
tokio = { version = "1", features = ["time"] }
[dev-dependencies]
tokio = { version = "1", features = ["full"] }
serde_json = "1"
