[package]
name = "phenotype-http-client-core"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "HTTP client core traits and retry logic for Phenotype"

[dependencies]
thiserror.workspace = true
tokio.workspace = true
tracing.workspace = true
async-trait.workspace = true

[lib]
path = "src/lib.rs"
