[package]
name = "phenotype-http-client-core"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "HTTP client core with reqwest integration for Phenotype"

[dependencies]
thiserror.workspace = true
tokio.workspace = true
tracing.workspace = true
async-trait.workspace = true
serde.workspace = true
serde_json.workspace = true
phenotype-error-core.workspace = true
reqwest = { version = "0.12", features = ["json"] }

[lib]
path = "src/lib.rs"

[[test]]
name = "client_test"
path = "tests/client_test.rs"
